<resources>
    <string name="app_name">hw2_RecyclerView</string>
    <string name="VerticalList">Верт список</string>
    <string name="Grid">Сетка</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="film_image">Обложка фильма</string>
    <string name="film_description">Описание фильма</string>
    <string name="film_name">Название фильма</string>
    <string name="randomCount">Добавить случайное количество элементов</string>
    <string name="deleteRandom">Удалить случайное количество элементов</string>
    <string name="addOneRandom">Добавить один случайный элемент</string>
    <string name="deleteAddRandom">Удалить один случайный элемент</string>
    <string name="enterCount">Введите количество</string>
</resources>